# tf2ds-install-wizard

./: .gitignore  .travis.yml  Cargo.toml  appveyor.yml  shell.nix
ci/: before_deploy.ps1  before_deploy.sh
src/: main.rs  target_os.rs  utils.rs
txt/: menu  wizard_end  wizard_s0  wizard_s1  wizard_s1_download_started  wizard_s2
