[package]
name = "tf2ds-install-wizard"
version = "0.1.0"
authors = ["ldesgoui <ldesgoui@gmail.com>"]
edition = "2018"

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
cursive.default_features = false
cursive.features = ["crossterm-backend"]
cursive.version = "0.12"
derive_more = "0.14"
directories = "2.0"
err-derive = "0.1"
itertools = "0.8"
log = "0.4"
once_cell = "0.2"
serde.features = ["derive"]
serde.version = "1.0"
steamy-vdf = "0.2"
toml = "0.5"
