[package]
name = "tf2ds-install-wizard"
version = "0.1.2"
authors = ["ldesgoui <ldesgoui@gmail.com>"]
edition = "2018"

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
cursive.default_features = false
cursive.features = ["crossterm-backend"]
cursive.version = "0.12"
directories = "2.0"
steamy-vdf = "0.2"
