[package]
name = "tf2ds-install-wizard"
version = "0.1.2"
authors = ["ldesgoui <ldesgoui@gmail.com>"]
edition = "2018"

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
directories = "2.0"
steamy-vdf = "0.2"

[dependencies.cursive]
default_features = false
features = ["crossterm-backend"]
version = "0.13"
